# antemortem-cli

./: .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  EASY_README.md  EASY_README_KR.md  NOTICE  PRE_EXISTING_IP.md  README.md  README_KR.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  consistency_drift.yml  feature_request.yml
.github/workflows/: ci.yml
benchmarks/golden_cases/binary_file_skipped/: README.md  expected.json  provider_output.json  recon.md
benchmarks/golden_cases/citation_range_too_large/: README.md  expected.json  provider_output.json  recon.md
benchmarks/golden_cases/citation_range_too_large/repo/src/: routes.py
benchmarks/golden_cases/duplicate_trap_ids/: README.md  expected.json  provider_output.json  recon.md
benchmarks/golden_cases/fabricated_citation_rejected/: README.md  provider_output.json  recon.md
benchmarks/golden_cases/fabricated_citation_rejected/repo/src/: config.py
benchmarks/golden_cases/ghost_exact_source_line/: README.md  provider_output.json  recon.md
benchmarks/golden_cases/ghost_risk_contradicted/: README.md  expected.json  provider_output.json  recon.md
benchmarks/golden_cases/high_severity_real_blocks/: README.md  provider_output.json  recon.md
benchmarks/golden_cases/malformed_schema_rejected/: README.md  provider_output.json  recon.md
benchmarks/golden_cases/missing_file_unresolved/: README.md  expected.json  provider_output.json  recon.md
benchmarks/golden_cases/new_trap_surfaced/: README.md  expected.json  provider_output.json  recon.md
benchmarks/golden_cases/new_trap_valid_evidence_hash/: README.md  provider_output.json  recon.md
benchmarks/golden_cases/path_traversal_citation/: README.md  expected.json  outside.py  provider_output.json  recon.md
benchmarks/golden_cases/real_risk_valid_citation/: README.md  expected.json  provider_output.json  recon.md
benchmarks/golden_cases/symlink_escape_citation/: README.md  expected.json  provider_output.json  recon.md
benchmarks/golden_cases/symlink_escape_citation/outside_dir/: escape.py
benchmarks/golden_cases/unresolved_insufficient_files/: README.md  expected.json  provider_output.json  recon.md
benchmarks/golden_cases/wrong_evidence_snippet/: README.md  provider_output.json  recon.md
docs/: claim_ledger.md  claim_ledger_kr.md  cli_exit_codes.md  download_analytics_note.md  download_analytics_note_kr.md  examples.md  examples_kr.md  github_release_draft.md  launch_note.md  launch_note_kr.md  post_release_verification.md  provider_compatibility.md  publish_readiness.md  release_candidate_checklist.md  release_hygiene.md  release_notes_template.md  scope_freeze.md  social_short.md  social_short_kr.md  toolkit_positioning.md  toolkit_positioning_kr.md  trust_model.md  trust_model_kr.md
docs/demo/: antemortem-cli-demo.en.srt
docs/release-notes/: v0.10.0.md  v0.10.2.md  v0.10.3.md  v0.10.4.md
examples/: _demo_output.txt  demo_antemortem.json  demo_antemortem.md  demo_recon.md  demo_recon.py  demo_replay.py
examples/gallery/agent_generated_patch_review/: README.md  recon.json  recon.md
examples/gallery/ci_gate_blocking_merge/: README.md  recon.json  recon.md
examples/gallery/ci_gate_blocking_merge/repo/src/: deploy.py
examples/gallery/missing_evidence_unresolved/: README.md  recon.json  recon.md
examples/gallery/risky_refactor_preflight/: README.md  recon.json  recon.md
examples/gallery/security_sensitive_change/: README.md  recon.json  recon.md
scripts/: check_claim_ledger.py  check_repo_consistency.py  consistency_allowlist.toml  generate_github_release_draft.py  generate_readme_claims.py  generate_release_notes.py  post_release_check.py  publish_readiness.py  rc_freeze_check.py  release_audit.py  scope_freeze_check.py  smoke_wheel_install.py
src/antemortem/: __init__.py  __main__.py  _run_metadata.py  _versions.py  api.py  citations.py  cli.py  critic.py  decision.py  exit_codes.py  file_safety.py  parser.py  prompts.py  schema.py  templates.py
src/antemortem/commands/: __init__.py  doctor.py  eval.py  evidence.py  gate.py  init.py  lint.py  run.py
src/antemortem/mcp/: __init__.py  __main__.py  server.py
src/antemortem/providers/: __init__.py  anthropic_provider.py  base.py  capabilities.py  factory.py  gemini_provider.py  openai_provider.py
tests/: test_adversarial_boundaries.py  test_api.py  test_ci_workflow.py  test_citations.py  test_claim_ledger.py  test_cli.py  test_cli_help_text.py  test_completeness_check.py  test_critic.py  test_decision.py  test_decision_strict_mode.py  test_demo_replay.py  test_doctor.py  test_eval_benchmarks.py  test_evidence_command.py  test_evidence_hash.py  test_examples_gallery.py  test_file_safety.py  test_gate.py  test_generate_github_release_draft.py  test_generate_readme_claims.py  test_generate_release_notes.py  test_ghost_critic.py  test_github_templates.py  test_init.py  test_launch_kit_docs.py  test_lint.py  test_mcp_run_safety_parity.py  test_mcp_server.py  test_mcp_workspace_boundary.py  test_package_metadata.py  test_parser.py  test_parser_robustness.py  test_payload_boundary.py  test_post_release_check.py  test_provider_contracts.py  test_providers.py  test_publish_readiness.py  test_rc_freeze_check.py  test_release_audit.py  (+11 more)
(+15 files in other folders)
