[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antemortem"
version = "0.4.0"
description = "Model-agnostic CLI for the Antemortem pre-implementation reconnaissance discipline — scaffold, run (Anthropic / OpenAI / OpenAI-compatible), optionally critique via a 2-pass adversarial review, and lint antemortem documents with disk-verified file:line citations. Four-level decision gate for CI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "hibou04-ops" },
]
keywords = [
    "antemortem",
    "reconnaissance",
    "pre-mortem",
    "risk-classification",
    "claude",
    "anthropic",
    "code-review",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "python-frontmatter>=1.1.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
# Slim installs for users who only need one vendor. The main 'dependencies'
# list includes both SDKs so the default `pip install antemortem` just
# works; these extras are for users who want to strip one out.
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]

[project.urls]
Homepage = "https://github.com/hibou04-ops/antemortem-cli"
Repository = "https://github.com/hibou04-ops/antemortem-cli"
Methodology = "https://github.com/hibou04-ops/Antemortem"
Issues = "https://github.com/hibou04-ops/antemortem-cli/issues"

[project.scripts]
antemortem = "antemortem.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/antemortem"]

[tool.hatch.build.targets.sdist]
include = [
    "src/antemortem",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
