[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "antemortem"
version = "0.10.2"
description = "CLI for pre-diff risk classification with schema validation and disk-verified citations."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "hibou04-ops" },
]
keywords = [
    "antemortem",
    "reconnaissance",
    "pre-mortem",
    "risk-classification",
    "claude",
    "anthropic",
    "code-review",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "python-frontmatter>=1.1.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "hatchling>=1.25.0",
    "build>=1.2.0",
    "twine>=5.0.0",
    "mcp>=1.0.0",
]
# Slim installs for users who only need one vendor. The main 'dependencies'
# list includes both SDKs so the default `pip install antemortem` just
# works; these extras are for users who want to strip one out.
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
gemini = ["google-genai>=1.0.0"]
# MCP server exposing core commands as agent-callable tools.
mcp = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://github.com/hibou04-ops/antemortem-cli"
Source = "https://github.com/hibou04-ops/antemortem-cli"
Repository = "https://github.com/hibou04-ops/antemortem-cli"
Documentation = "https://github.com/hibou04-ops/antemortem-cli#readme"
Changelog = "https://github.com/hibou04-ops/antemortem-cli/blob/main/CHANGELOG.md"
Issues = "https://github.com/hibou04-ops/antemortem-cli/issues"
Methodology = "https://github.com/hibou04-ops/Antemortem"

[project.scripts]
antemortem = "antemortem.cli:app"
antemortem-mcp = "antemortem.mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/antemortem"]

[tool.hatch.build.targets.sdist]
include = [
    "src/antemortem",
    "README.md",
    "README_KR.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
